api/internal/setup/cluster-services/traefik/kustomize.template/templates/ingressroute.yaml
---
# Source: traefik/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik
    helm.sh/chart: traefik-36.1.0
    app.kubernetes.io/managed-by: Helm
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`dashboard.localhost`)
    kind: Rule
    services:
      - kind: TraefikService
        name: api@internal
